CSS fix to keep ProgressBar from stretching to 2x the correct width.

--- a/assets/components/src/progress-bar/style.scss
+++ b/assets/components/src/progress-bar/style.scss
@@ -30,6 +30,7 @@
 
 		&::before {
 			content: "";
+			left: 0;
 			width: 100%;
 			height: 4px;
 			background-color: $muriel-gray-100;
